<resources>
    <string name="loginpage">LOGIN</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="not_a_user_yet">Not a user yet?</string>
    <string name="register"><u>Register</u></string>
    <string name="registerpage">REGISTER</string>
    <string name="register_button">Register</string>
    <string name="already_a_user">Already a user? Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="guest">Guest</string>
    <string name="guest_goto_text">Don\'t want to login? Continue as</string>
    <string name="dream">Dream</string>
    <string name="hello_welcome_back">HELLO, WELCOME BACK</string>
    <string name="welcome">WELCOME</string>
    <string name="first_name">First Name</string>
    <string name="signup">SIGN UP</string>
    <string name="login1">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_sign_up">New user? SIGN UP</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_dashboard">Welcome user, you are logged in</string>
    <string name="sign_out">SIGN OUT</string>


    <string name="app_name">Dream Restaurant Finder</string>
    <string name="dine_in">Dine-In</string>
    <string name="take_out">Take-Out</string>
    <string name="so_you_re_looking_for_food_eh">So you\'re looking for food, Eh?</string>
    <string name="anything_you_can_t_eat">Anything you can\'t eat?</string>
    <string name="dairy">Dairy</string>
    <string name="gluten">Gluten</string>
    <string name="meat">Meat</string>
    <string name="fish">Fish</string>
    <string name="what_tingles_your_taste_buds">What tingles your taste buds?</string>
    <string name="next"><![CDATA[Next >]]></string>
    <string name="bike">Bike</string>
    <string name="transit">Transit</string>
    <string name="drive">Drive</string>
    <string name="walk">Walk</string>
    <string name="how_are_you_getting_there">How are you getting there?</string>
    <string name="search_for_a_location">Search For A Location</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="from_where">From Where?</string>
    <string name="how_far_are_you_willing_to_journey">How far are you willing to journey?</string>
    <string name="indecision_shall_exist_no_more">Indecision Shall Exist No More!</string>
    <string name="finding_the_best_food_for_you">Finding the best food for you…</string>


    <string name="google_maps_api">AIzaSyBE3zgLJ3y6lM8q8IoTt6L9Y6zEMXp5hyQ</string>
    <string name="title_activity_maps">Map</string>
    <string name="take_me_there">Take me there!</string>
    <string name="dream_restaurant">Dream Restaurant</string>
    <string name="find_me_food_needs_permission_to_access_your_location_to_provide_required_services_please_allow_this_permission_for_a_better_overall_experience_d">Find Me Food needs permission to access your location to provide required services. Please allow this permission for a better overall experience :D</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_required">Permission Required</string>
    <string name="choose_a_profile_pic_from_your_device">Choose a profile pic from your device</string>
    <string name="exception_error">This is an exception error</string>
    <string name="done">DONE</string>
</resources>