<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Permissions"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100px"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_required"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/find_me_food_needs_permission_to_access_your_location_to_provide_required_services_please_allow_this_permission_for_a_better_overall_experience_d" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/btn_grant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="#C0C5C1"
        android:textStyle="bold"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/grant_permission"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>